# wasm-boids

./: .gitignore  0094f98646dbccd3.wasm  06275b43d7854ee1.wasm  064853298d0efba9.wasm  0b09a117a0033fc3.wasm  0bc93104512772fc.wasm  15c3d08c88bd1a32.wasm  190c6d2fdad4f003.wasm  1ca0abbfedbf0a34.wasm  228a74664e9e2523.wasm  233259cd9c94f611.wasm  26a273ee25eca211.wasm  339d605f0a514c3d.wasm  378367ca92c398e9.wasm  441dbb9a9f8e4e02.wasm  523dec2c7e3bb150.wasm  57d52729066de4bb.wasm  617ea824c6f9c8cf.wasm  668cf3276e905c2d.wasm  746b71fef67839a7.wasm  7cd4891b28b125bd.wasm  7cfa3720ff942dc8.wasm  7e3af5649d554a5b.wasm  81eae0b1ee4cef1c.wasm  8429f4802707bca5.wasm  84c6f8069210dd2f.wasm  938b5d58a9ff9f0b.wasm  CMakeLists.txt  LICENSE  README.md  a00f7d4d9889bcfd.wasm  a2b70c1e7f0a3786.wasm  a69a175cecb99e6b.wasm  ad9bd0d5b1d8f5b1.wasm  b8bae10d3cf2adb9.wasm  cc99888d5c55ab04.wasm  cd3d6673b7c57f8f.wasm  cec2a6343b6046d5.wasm  coi-serviceworker.js  d4d755a98b62e738.wasm  (+12 more)
models/: boidModel.assbin  boidModel.glb  boidModel_lod.glb  boidPredetorModel.glb
public/: index.html
public/models/: boidModel.glb  boidModel_lod.glb  boidPredetorModel.glb
scripts/: analyze_wasm.py
src/: App.vue  main.js
src/components/: Settings.vue
src/rendering/: BoidInstancing.js  FogPipeline.js  ParticleField.js
src/simulation/: WasmtimeBridge.js
src/state/: FlockSettingsStore.js
src/wasm/: boid.h  boid_factory.cpp  boid_factory.h  boid_tree_spatial_index.cpp  boid_tree_spatial_index.h  boid_unit.cpp  boid_unit.h  boids_buffers.h  boids_simulation.cpp  boids_simulation.h  boids_tree.cpp  boids_tree.cpp.backup  boids_tree.h  dbvh_index.cpp  dbvh_index.h  debug_utils.h  dynamic_bvh.cpp  dynamic_bvh.h  entry.cpp  entry.h  lbvh_index.cpp  lbvh_index.h  main.cpp  native_simulation.cpp  native_simulation.h  obstacle_field.cpp  obstacle_field.h  platform_utils.h  pool_accessor.h  scale_utils.h  simulation_tuning.cpp  simulation_tuning.h  spatial_index.h  spatial_query.h  species_params.h  thread_pool.h  uniform_grid.cpp  uniform_grid.h  vec3.h  wasm_bindings.cpp
static/css/: index.03eb9510.css  index.13854f80.css  index.27e11c49.css  index.2a743f88.css  index.2f81eb57.css  index.398a8aac.css  index.56c09248.css  index.58139b2d.css  index.5db5f775.css  index.6701e57e.css  index.69d10591.css  index.6b51b136.css  index.96411d67.css  index.99615008.css  index.9bf60500.css  index.9fb189e1.css  index.a44e4e5f.css  index.b16e49a2.css  index.b1c12d21.css  index.b2154271.css  index.b47ef306.css  index.b4c0fcd0.css  index.b62c346b.css  index.b7dc1f68.css  index.cc58a2bc.css  index.d03f4dbb.css  index.d41c70d4.css  index.d48f4214.css  index.d559b76a.css  index.e0818cac.css  index.e0f8cde9.css  index.e7708df5.css  index.f0b8bc45.css  index.f2f2803e.css  index.f3e70ec8.css  index.f48f4b7f.css  index.f7ad5e51.css  index.fb8e80e2.css
static/js/: 116.7808f10d.js  152.e0172c99.js  268.a37db019.js  372.202a8e6a.js  456.f85c30dc.js  456.f85c30dc.js.map  580.1178123f.js  580.1178123f.js.map  580.12a1b76d.js  580.12a1b76d.js.map  580.18419626.js  580.18419626.js.map  580.1a51494f.js  580.1a51494f.js.map  580.23879677.js  580.23879677.js.map  580.239ead3e.js  580.239ead3e.js.map  580.26af96db.js  580.26af96db.js.map  580.3f754e14.js  580.3f754e14.js.map  580.501715ee.js  580.501715ee.js.map  580.5adf90df.js  580.5adf90df.js.map  580.6b8ffadc.js  580.6b8ffadc.js.map  580.6cd37784.js  580.6cd37784.js.map  580.710c45de.js  580.710c45de.js.map  580.716b1aa2.js  580.716b1aa2.js.map  580.73ae3187.js  580.73ae3187.js.map  580.749698d2.js  580.749698d2.js.map  580.7bc1af6d.js  580.7bc1af6d.js.map  (+578 more)
